--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <logback.version>1.2.3</logback.version>
+        <jackson.core.version>2.8.7</jackson.core.version>
+        <redis.version>2.8.1</redis.version>
+        <hazelcast.version>3.7.2</hazelcast.version>
+        <version>2.6.1</version>
+
     </properties>
     
     <dependencies>
@@ -27,17 +33,27 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
-            <version>3.7.2</version>
+            <version>${hazelcast.version}</version>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.8.1</version>
+            <version>${redis.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.7</version>
+            <version>${jackson.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>${janino.version}</version>
         </dependency>
     </dependencies>
 
